--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,56 @@
 asgiref==3.6.0
-attrs==22.2.0
+attrs==23.1.0
 autobahn==23.1.2
 Automat==22.10.0
+backcall==0.2.0
 cffi==1.15.1
 channels==4.0.0
+colorzero==2.0
 constantly==15.1.0
-cryptography==39.0.2
-daphne==3.0.2
+contourpy==1.0.7
+cryptography==40.0.2
+cycler==0.11.0
+daphne==4.0.0
+decorator==4.4.2
 Django==4.1.7
+fonttools==4.39.3
+gpiozero==1.6.2
+greenlet==0.4.17
+gyp==0.1
 hyperlink==21.0.0
 idna==3.4
+importlib-resources==5.12.0
 incremental==22.10.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
+ipython==7.20.0
+ipython-genutils==0.2.0
+jedi==0.18.0
+kiwisolver==1.4.4
+matplotlib==3.7.1
+msgpack==1.0.0
+numpy==1.24.3
+packaging==23.1
+parso==0.8.1
+pexpect==4.8.0
+pickleshare==0.7.5
+pigpio==1.78
+Pillow==9.5.0
+prompt-toolkit==3.0.14
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
 pycparser==2.21
-pyOpenSSL==23.0.0
+Pygments==2.7.1
+pynvim==0.4.2
+pyOpenSSL==23.1.1
+pyparsing==3.0.9
+python-dateutil==2.8.2
+scapy==2.4.4
 service-identity==21.1.0
 six==1.16.0
 sqlparse==0.4.3
+traitlets==5.0.5
 Twisted==22.10.0
-twisted-iocpsupport==1.0.2
 txaio==23.1.1
-typing_extensions==4.5.0
-tzdata==2022.7
-websocket-client==1.5.1
-zope.interface==5.5.2
+typing-extensions==4.5.0
+wcwidth==0.1.9
+zipp==3.15.0
+zope.interface==6.0
